# MCP-OpenAI-DeepResearch-

./: .gitignore  PRD.md  README.md  deep-research-cli.md  ev_market.md  example-mcp-config.json  pyproject.toml  requirements.txt  todo.md
deepresearch/: quantum_test.md
deepresearch_cli/: __init__.py  __main__.py  cli.py
mcp_deepresearch/: __init__.py  __main__.py  server.py
